Navbar now is on bottom fixed on mobile maxwidth 960px, and show and hide depends of scrolling up or down. Is for improving UX

--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -1,16 +1,25 @@
 .navbar {
-  background-color: #fff;
+  background-color: $backgroundcolor;
   z-index: 99999;
   position: fixed;
-  bottom: 0;
-  left: 0;
+  bottom: 2%;
+  left: 2%;
 
-  width: 100%;
-  padding: 1rem;
+  width: 96%;
+  padding: 1rem 1.5rem 1rem 1.5rem;
 
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+
+  border: 2px solid $maincolor;
+  border-radius: 50px;
+
+  transition: all 0.2s ease-in-out;
+
+  &.hide {
+    bottom: -20%;
+  }
 
   &.rozanewsMode {
     z-index: 999;
@@ -21,22 +30,28 @@
   }
 
   @include respond-to(mobile-landscape) {
+
+    background-color: unset;
     position: relative;
     flex-direction: row;
     padding: 1rem 10% 1rem 10%;
   }
   @include respond-to(tablet-portrait) {
-    padding-left: 20%;
-    padding-right: 20%;
+    padding: 1rem 20% 1rem 20%;
+  }
+
+  @include respond-to(tablet-landscape) {
+    padding: 1rem 20% 1rem 20%;
   }
 }
 
 
 .navbar__logoImg {
-  width: 35%;
+  width: 10%;
+  max-width: 6rem;
 
   @include respond-to(mobile-landscape) {
-    width: 30%;
+    width: 25%;
   }
 
   @include respond-to(tablet-landscape) {
@@ -45,15 +60,15 @@
 }
 
 .navbar__menu {
-  width: 100%;
-  margin-top: 0.5rem;
-  padding-top: 0.5rem;
+  width: 80%;
 
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
 
-  border-top: 1px solid $maincolor;
+  & >:nth-child(n+1) {
+    margin-left: 10px;
+  }
 
   & > a {
     color: $maincolor;
@@ -103,8 +118,8 @@
 
 .navbar__cartIcon {
   position: relative;
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
 
 
   @include respond-to(mobile-landscape) {
